feat: delete cart item, stripe in service
