# packages/reservation/openapi.yaml
@@ -4025,6 +4025,11 @@ paths:
         - Cart and Checkout
       security:
         - bearerAuthJWT: []
+      parameters:
+        - in: header
+          name: organizationid
+          schema:
+            type: string
       requestBody:
         content:
           application/json:
@@ -4045,6 +4050,11 @@ paths:
         - Cart and Checkout
       security:
         - bearerAuthJWT: []
+      parameters:
+        - in: header
+          name: organizationid
+          schema:
+            type: string
       responses:
         '200':
           description: Success
@@ -4107,6 +4117,16 @@ paths:
         - Cart and Checkout
       security:
         - bearerAuthJWT: []
+      parameters:
+        - in: header
+          name: organizationid
+          schema:
+            type: string
+        - in: path
+          name: cartItemId
+          schema:
+            type: string
+          required: true
       responses:
         '200':
           description: Success
@@ -4120,6 +4140,16 @@ paths:
         - Cart and Checkout
       security:
         - bearerAuthJWT: []
+      parameters:
+        - in: header
+          name: organizationid
+          schema:
+            type: string
+        - in: path
+          name: cartItemId
+          schema:
+            type: string
+          required: true
       responses:
         '200':
           description: Success
@@ -4134,6 +4164,11 @@ paths:
         - Cart and Checkout
       security:
         - bearerAuthJWT: []
+      parameters:
+        - in: header
+          name: organizationid
+          schema:
+            type: string
       responses:
         '200':
           description: Success
@@ -4144,6 +4179,11 @@ paths:
         - Cart and Checkout
       security:
         - bearerAuthJWT: []
+      parameters:
+        - in: header
+          name: organizationid
+          schema:
+            type: string
       responses:
         '200':
           description: Success
